--- a/server/.env.sample
+++ b/server/.env.sample
@@ -1,2 +1,2 @@
-CONNECTION_URL = mongodb+srv://spreddy594:Asdf123@cluster0.dookg.mongodb.net/memoriesdb?retryWrites=true&w=majority
+CONNECTION_URL = MONGO_CONNECTION_URL
 PORT = 5000
